Project1/force-app/main/default/objects/Incident__c/Incident__c.object-meta.xml
<CustomObject>
    <label>Incident</label>
    <nameField>
        <label>Incident Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Incidents</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>