Project1/force-app/main/default/objects/Incident__c/fields/Primary_Afffected_Group__c.field-meta.xml
<CustomField>
    <fullName>Primary_Afffected_Group__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Primary Afffected Group</label>
    <referenceTo>Demographic_Group__c</referenceTo>
    <relationshipLabel>Incidents</relationshipLabel>
    <relationshipName>Incidents</relationshipName>
    <type>Lookup</type>
</CustomField>