Project1/force-app/main/default/objects/Incident__c/fields/Topic__c.field-meta.xml
<CustomField>
    <fullName>Topic__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Topic</label>
    <referenceTo>Topic_of_Concern__c</referenceTo>
    <relationshipLabel>Topic</relationshipLabel>
    <relationshipName>Incidents</relationshipName>
    <type>Lookup</type>
</CustomField>